build/tmp/compileFrcUserProgramDebugExecutableFrcUserProgramCpp/output.txt
See file:///C:/Users/RoboCats/Desktop/MelbourneRoboCatsCode/Crescendo_2024/5648_2024_RobotCode/build/tmp/compileFrcUserProgramDebugExecutableFrcUserProgramCpp/output.txt for all output for compileFrcUserProgramDebugExecutableFrcUserProgramCpp.
compiling Robot.cpp failed.
C:\Users\RoboCats\Desktop\MelbourneRoboCatsCode\Crescendo_2024\5648_2024_RobotCode\src\main\cpp\Robot.cpp: In member function 'virtual void Robot::RobotInit()':
C:\Users\RoboCats\Desktop\MelbourneRoboCatsCode\Crescendo_2024\5648_2024_RobotCode\src\main\cpp\Robot.cpp:11:65: error: expected ';' before 'm_chooser'
   11 |   m_chooser.SetDefaultOption(kAutoNameDefault, kAutoNameDefault)
      |                                                                 ^
      |                                                                 ;
   12 |   m_chooser.AddOption(kAutoNameCustom, kAutoNameCustom);
      |   ~~~~~~~~~                                                      

Finished compileFrcUserProgramDebugExecutableFrcUserProgramCpp, see full log file:///C:/Users/RoboCats/Desktop/MelbourneRoboCatsCode/Crescendo_2024/5648_2024_RobotCode/build/tmp/compileFrcUserProgramDebugExecutableFrcUserProgramCpp/output.txt.
